# Sex

./: .gitignore  AGENTS.md  AGENT_HANDOFF_GP_CLOCK.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  HANDOFF.md  HANDOFF_README.txt  IPCPKU_MAP.md  IPCtax.txt  LICENSE  Makefile  PHASE_28_HANDOFF.md  README.md  access_map.txt  boot_phase20.sh  build_and_run.sh  build_payload.sh  build_payload.sh.phase25-final.bak  cosmicports.md  crates_to_add.txt  dev.sh  diagnostic_straitjacket.md  docker_final_build.sh.bak  docker_final_build_v10.sh  docker_final_build_v3.sh  docker_final_build_v4.sh  docker_final_build_v7.sh  docker_final_build_v8.sh  docker_final_build_v9.sh  execute_phase20.sh  final_output.diff  finalize_phase20.sh  finalize_sex.sh  finalize_sex_pdx.sh  fix_all.sh  fix_and_build.sh  fix_dependencies.sh  fix_phase1.sh  (+53 more)
apps/qupid/: Cargo.toml
apps/qupid/src/: main.rs
apps/sexsh/: Cargo.toml
apps/sexsh/src/: main.rs
crates/sex-pdx/: Cargo.toml
crates/sex-pdx/src/: lib.rs  lib.rs.bak  lib.rs.phase23.bak  lib.rs.phase25.bak  ring.rs
crates/tatami/: Cargo.toml
crates/tatami/src/: main.rs
kernel/: Cargo.toml  Cargo.toml.bak  linker.ld  x86_64-sex.json
kernel/.cargo/: config.toml
kernel/src/: amdahl.rs  apic.rs  apic.rs.bak  benchmark.rs  capability.rs  cheri.rs  core_local.rs  devmgr.rs  elf.rs  gdt.rs  hal.rs  init.rs  init.rs.bak  init.rs.patch  initrd.rs  interrupts.rs  interrupts.rs.bak  interrupts.rs.phase23.bak  ipc.rs  ipc_ring.rs  keyboard.rs  latency_guard.rs  lib.rs  lib.rs.bak  main.rs  main.rs.bak  memory.rs  pci.rs  pdx.rs  pku.rs  scheduler.rs  scheduler.rs.bak  serial.rs  slab.rs  smp.rs  smp.rs.bak  sunni.rs  throughput_test.rs  trampoline.asm  vga.rs
kernel/src/arch/x86_64/: serial.rs
kernel/src/capabilities/: engine.rs
kernel/src/desktop/: binding.rs  graph.rs  mod.rs  observability.rs  persistence.rs  replay.rs  workspace.rs
kernel/src/drivers/: pci.rs
kernel/src/graphics/: gpu_lease.rs  handoff.rs  mod.rs
kernel/src/hal/: acpi.rs  mod.rs  pci.rs  x86_64.rs
kernel/src/hw/: init.rs  init.rs.bak
kernel/src/input/: focus.rs  mod.rs  router.rs
kernel/src/ipc/: buffer.rs  messages.rs  pagefault.rs  router.rs  state.rs
kernel/src/loader/: elf.rs
kernel/src/memory/: allocator.rs  manager.rs  mod.rs  pku.rs  va_allocator.rs
kernel/src/pd/: create.rs
kernel/src/servers/: app.rs  audio.rs  bcm2712.rs  bridge.rs  btrfs.rs  cluster.rs  dde.rs  drm.rs  e1000.rs  ext2.rs  fat.rs  input.rs  libc.rs  libsex_net.rs  linsex.rs  mod.rs  network.rs  nvidia.rs  nvme.rs  pager.rs  runit.rs  serial.rs  sex_gemini.rs  sexc.rs  sexdrm.rs  sexgemini.rs  sexinput.rs  sexit.rs  sexnet.rs  sexnode.rs  sexpower.rs  sexsound.rs  sexstore.rs  sext.rs  sexvfs.rs  sexwifi.rs  srv_font.rs  srv_gpu.rs  srv_sec.rs  srv_wayland.rs  (+5 more)
kernel/src/surface/: manager.rs  mod.rs  surface.rs  window.rs
kernel/src/syscalls/: fork.rs  fs.rs  mod.rs  net.rs  pipe.rs  spawn.rs  storage.rs  store.rs  translator.rs
kernel/src/ucgm/: engine.rs  mod.rs
kernel/src/xipc/: messages.rs  router.rs
kernel/tests/: phase03_sexvfs.rs  phase04_distribution.rs  phase05_sexdrives.rs  phase06_signal_delivery.rs  phase07_memory_and_pagefault.rs  phase08_elf_pd_spawn.rs  phase09_driver_dma_input.rs  phase10_graphical.rs  phase11_gnu_pipeline.rs  phase11_signals.rs  phase12_translators.rs  phase13_build_validation.rs  phase13_self_hosting.rs  phase13_validation.rs  phase14_verification.rs  phase15_driver_translation.rs  phase16_benchmark.rs  phase16_final_validation.rs
relibc/: Cargo.toml
relibc/src/: lib.rs
relibc/src/platform/: mod.rs
relibc/src/platform/sex/: mod.rs
servers/sex-ld/: Cargo.toml
servers/sex-ld/src/: main.rs  pdx.rs
servers/sexdisplay/: Cargo.toml  sexdisplay_readme.md
servers/sexdisplay/src/: lib.rs  lib.rs.phase23.bak  lib.rs.phase24.bak  lib.rs.phase25.bak  main.rs  main.rs.bak  main.rs.orig  main.rs.patch  main.rs.rej  messages.rs  scanout.rs
servers/sexfiles/: Cargo.toml
servers/sexfiles/src/: cache.rs  lib.rs  main.rs  messages.rs  pdx.rs  trampoline.rs  vfs.rs
servers/sexfiles/src/backends/: diskfs.rs  mod.rs  ramfs.rs  tmpfs.rs
servers/sexinput/: Cargo.toml
servers/sexinput/src/: main.rs
servers/silk-shell/: Cargo.toml  Cargo.toml.bak  main.rs
servers/silk-shell/src/: lib.rs  main.rs  main.rs.phase25.bak
servers/silkbar/: Cargo.toml
servers/silkbar/src/: main.rs
servers/tranny/: Cargo.toml
servers/tranny/src/: lib.rs  main.rs
sex-packages/ion-sexshell/: Cargo.toml
sex-packages/ion-sexshell/src/: main.rs  pdx_io.rs  termion_sex.rs
sex-packages/sexbuild/: Cargo.toml  Cargo.toml.tmp.bak
sex-packages/sexbuild/build_dir/ffmpeg6/: build.sh
sex-packages/sexbuild/build_dir/zlib/: build.sh
sex-packages/sexbuild/src/: main.rs  main.rs.bak
sex-rt/: Cargo.toml
sex-rt/src/: lib.rs
sex-src/lib/libsys/: Cargo.toml
sex-src/lib/libsys/src/: lib.rs  messages.rs  pdx.rs  sched.rs
tools/sex-debug/: Cargo.toml  Cargo.toml.bak  STANDARDS.md
tools/sex-debug/src/: domain.rs  main.rs  main.rs.bak  model.rs
tools/sex-debug/src/analyze/: engine.rs  mod.rs  report.rs.bak  rules.rs
tools/sex-debug/src/fix/: mod.rs  suggest.rs
tools/sex-debug/src/qemu/: mod.rs  qmp.rs
tools/sex-debug/src/trace/: mod.rs  parser.rs  symbol.rs
tools/sex-debug/src/viz/: mod.rs  timeline.rs
tools/sex-debug/target_host/: .rustc_info.json
tools/sex-debug/target_host/release/.fingerprint/compiler_builtins-1c483e2194c8d5e5/: build-script-build-script-build.json
tools/sex-debug/target_host/release/.fingerprint/darling_core-ef0c3535d5f004c3/: lib-darling_core.json
tools/sex-debug/target_host/release/.fingerprint/derive_more-impl-9319d9b97f461031/: lib-derive_more_impl  lib-derive_more_impl.json
tools/sex-debug/target_host/release/.fingerprint/document-features-2db6744fe190f005/: lib-document_features  lib-document_features.json
tools/sex-debug/target_host/release/.fingerprint/heck-bc4c8ca3a67a7e7b/: lib-heck  lib-heck.json
tools/sex-debug/target_tools/: .rustc_info.json
(+1064 files in other folders)
