[workspace]
resolver = "2"
members = [
    "kernel",
    "servers/sexdisplay",
    "servers/sexshop",
    "servers/silk-shell",
    "servers/sexinput",
    "servers/silkbar",
    "apps/sexdrive",
    "purple-scanout",
    "crates/sex-pdx",
    "crates/sex-graphics",
    "crates/silkbar-model",
]
[profile.release]
panic = "abort"
