[package]
name = "sex-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "=0.11.7"
x86_64 = "0.15.2"
uart_16550 = "0.3.0"
spinning_top = "0.3.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
conquer-once = { version = "0.4.0", default-features = false }
linked_list_allocator = "0.10.5"
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
acpi = "5.0.0"
aml = "0.16.4"
pic8259 = "0.10.1"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
