[package]
name = "sex-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = { version = "=0.11.7", default-features = false }
x86_64 = { version = "0.15.2", default-features = false }
uart_16550 = { version = "0.3.0", default-features = false }
spinning_top = { version = "0.3.0", default-features = false }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
conquer-once = { version = "0.4.0", default-features = false }
linked_list_allocator = { version = "0.10.5", default-features = false }
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
acpi = { version = "5.0.0", default-features = false }
aml = { version = "0.16.4", default-features = false }
pic8259 = { version = "0.10.1", default-features = false }

# Explicitly disable default features for problematic transitive dependencies
bitflags = { version = "2.4.0", default-features = false }
radium = { version = "0.7.0", default-features = false }
bit_field = { version = "0.10.3", default-features = false }
volatile = { version = "0.4.6", default-features = false }
scopeguard = { version = "1.2.0", default-features = false }
tap = { version = "1.0.1", default-features = false }

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
