[package]

name = "sex-kernel"
version = "0.1.0"
edition = "2021"


# Explicitly disable default features for problematic transitive dependencies

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
















[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
bitflags = { version = "2.6.0", default-features = false }
spin = "0.9.8"
sex-pdx = { path = "../crates/sex-pdx" }
sex-rt = { path = "../sex-rt" }
libsys = { path = "../sex-src/lib/libsys" }
