#![no_std]
[package]

name = "libc"
version = "0.2.185"
edition = "2021"

[lib]
name = "libc"
crate-type = ["staticlib", "rlib"]

# core libc deps omitted for brevity
















[features]
rustc-dep-of-std = []
rustc-std-workspace-core = []
align = []
std = []

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
bitflags = { version = "2.6.0", default-features = false }
spin = "0.9.8"
sex-pdx = { path = "../crates/sex-pdx" }
sex-rt = { path = "../sex-rt" }
libsys = { path = "../sex-src/lib/libsys" }
