[package]
name = "qupid"
version = "1.4.0"
edition = "2021"
authors = ["Qupid Devs"]
description = "QUPID: SASOS Native Media Engine"

[features]
default = ["ffmpeg-primary"]
ffmpeg-primary = []
symphonia-fallback = ["dep:symphonia"]

[dependencies]
sex-rt  = { path = "../../sex-rt" }
sex-pdx = { path = "../../crates/sex-pdx" }
silkclient   = { path = "../../crates/silk-client" }
sex-graphics = { path = "../../crates/sex-graphics" }
libc    = { version = "0.2.185" }

# Raw FFI against system libav* via #[link(name = "avformat")] etc.
# No bindgen — compatible with any FFmpeg 7/8/9 at link time.
symphonia = { version = "0.5.3", optional = true, default-features = false, features = [
    "mp3", "aac", "flac", "ogg", "wav", "pcm",
] }
