[package]

name = "sex-pdx"
version = "0.1.0"
edition = "2021"


[features]
default = []
















[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
bitflags = { version = "2.6.0", default-features = false }
spin = "0.9.8"
libsys = { path = "../../sex-src/lib/libsys" }
