[package]

name = "sexinput"
version = "0.1.0"
edition = "2021"

















[dependencies]
linked_list_allocator = { version = "0.10.5", default-features = false }
sex-pdx = { path = "../../crates/sex-pdx" }
sex-rt = { path = "../../sex-rt" }
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }
