[package]
name = "silk-shell"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
sex-pdx = { path = "../../crates/sex-pdx" }
sex-graphics = { path = "../../crates/sex-graphics" }
linked_list_allocator = { version = "0.10.5", features = ["use_spin"] }
