[package]
name = "silkbar"
version = "0.1.0"
edition = "2021"

[dependencies]
silkbar-model = { path = "../../crates/silkbar-model", default-features = false }
sex-pdx = { path = "../../crates/sex-pdx", default-features = false }
sex-rt = { path = "../../sex-rt" }

[features]
default = ["no_std"]
no_std = []
