[package]
name = "tuxedo"
version = "0.1.0"
edition = "2021"

[dependencies]
sex-pdx = { path = "../../crates/sex-pdx", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[lib]
name = "tuxedo"
path = "src/lib.rs"

[[bin]]
name = "tuxedo"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
