[package]
name = "sexbuild"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
hex = "0.4.3"
petgraph = "0.8.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
toml = "1.1.2"
walkdir = "2.5.0"
sex-pdx = { path = "../../crates/sex-pdx", features = ["serde"] }
