[package]
name = "sex-debug"
version = "0.1.0"
edition = "2024"

# Host-only tool standards:
# 1. Must compile on standard Linux/macOS (requires std).
# 2. Breaks root workspace build-std inheritance via [workspace] block below.
[workspace]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
